@@ -10,6 +10,7 @@ Date: ????
     - Fix quality beacons having no gui
     - Centralize mod_prefix and put commands in their own file
     - Create the tile beacon prototype
+    - Add modding instructions to the readme
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.5
 Date: 2025. 01. 30
